--- a/src/components/landing-components/style.scss
+++ b/src/components/landing-components/style.scss
@@ -3,15 +3,16 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    // width: 100%;
+    width: 80%;
     background-color: #F6F7FB;
     // margin-right: 150px;
-    margin-left: 100px;
+    // margin-left: 100px;
     height: 500px;
     border-radius: 20px;
+    margin: auto;
 
     .left {
-        width: 35%;
+        width: 50%;
         padding-left: 60px;
         padding-right: 60px;
         display: flex;
@@ -19,11 +20,11 @@
         justify-content: left;
         align-items: left;
 
-        h2{
+        h2 {
             font-size: 25px;
         }
 
-        button{
+        button {
             padding: 15px;
             border-radius: 25px;
             text-align: center;
@@ -40,9 +41,32 @@
         width: 35%;
         background: rgba(56, 215, 139, 0.51);
         height: 100%;
-        width: 40%;
+        width: 50%;
         border-top-right-radius: 20px;
         border-bottom-right-radius: 20px;
+
+        position: relative;
+        overflow: hidden;
+
+        .overlay {
+            width: 100%;
+            background-color: rgba(56, 215, 139, 0.51);
+            position: absolute;
+            height: 100%;
+        }
+
+
+        .cover {
+         
+            background-repeat: no-repeat;
+            width: 100%;
+            height: 100%;
+            background-position: center center;
+            text-align: center;
+            margin: auto;
+            padding: 0;
+        }
+
 
     }
 }
